force-app/main/default/objects/Case/fields/Priority_Override__c.field-meta.xml
<CustomField>
    <fullName>Priority_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority Override</label>
    <type>Checkbox</type>
</CustomField>