force-app/main/default/objects/Case/fields/Refund_Amount_c__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount_c__c</fullName>
    <label>Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>