force-app/main/default/objects/Case/fields/Refund_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reason__c</fullName>
    <label>Refund Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product is damaged</fullName>
            </value>
            <value>
                <fullName>Product mismatch</fullName>
            </value>
            <value>
                <fullName>Product quality not good</fullName>
            </value>
            <value>
                <fullName>Product size fitting issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>