force-app/main/default/objects/Case/fields/Refund_Status__c.field-meta.xml
<CustomField>
    <fullName>Refund_Status__c</fullName>
    <label>Refund Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Payment Cancelled</fullName>
            </value>
            <value>
                <fullName>Payment In-Process</fullName>
            </value>
            <value>
                <fullName>Payment Not started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>