force-app/main/default/objects/Case/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <label>SLA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Breached</fullName>
            </value>
            <value>
                <fullName>Within SLA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>