force-app/main/default/objects/Case/recordTypes/Billing_Support.recordType-meta.xml
<RecordType>
    <fullName>Billing_Support</fullName>
    <active>true</active>
    <businessProcess>Billing</businessProcess>
    <description>For billing and payment cases</description>
    <label>Billing Support</label>
</RecordType>