force-app/main/default/objects/Case/recordTypes/Delivery_Support.recordType-meta.xml
<RecordType>
    <fullName>Delivery_Support</fullName>
    <active>true</active>
    <businessProcess>Billing</businessProcess>
    <description>For delivery-related cases</description>
    <label>Delivery Support</label>
</RecordType>