force-app/main/default/objects/Case/recordTypes/Refund_Support.recordType-meta.xml
<RecordType>
    <fullName>Refund_Support</fullName>
    <active>true</active>
    <businessProcess>Billing</businessProcess>
    <description>For refund-related cases</description>
    <label>Refund Support</label>
</RecordType>