force-app/main/default/objects/Case/validationRules/SLA_Breach_Date_Cannot_Less_thanTodayDat.validationRule-meta.xml
<ValidationRule>
    <fullName>SLA_Breach_Date_Cannot_Less_thanTodayDat</fullName>
    <active>true</active>
    <description>SLA date should be today or higher than today date</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(SLA_Breach_Date__c)),
    SLA_Breach_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>SLA_Breach_Date__c</errorDisplayField>
    <errorMessage>SLA Breach Date cannot be less than today date.</errorMessage>
</ValidationRule>