force-app/main/default/objects/Case/listViews/Billing_Case.listView-meta.xml
<ListView>
    <fullName>Billing_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Billing Queue</label>
    <queue>Billing</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>