force-app/main/default/objects/Case/listViews/Delivery_Case.listView-meta.xml
<ListView>
    <fullName>Delivery_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Delivery Queue</label>
    <queue>Delivery</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>